# PersianToken

./: .gitignore  DATA.md  FINDINGS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample.jsonl
notes/: sanity_check.md
results/: context.csv  cost.csv  summary.csv  token_counts.csv
scripts/: build_corpus.py  corpus_stats.py  sanity_check.py
src/persiantokenbench/: cli.py  context.py  corpus.py  cost.py  measure.py  metrics.py  plots.py
src/persiantokenbench/adapters/: __init__.py  base.py  hf_adapter.py  registry.py  tiktoken_adapter.py
tests/: test_adapters.py  test_context.py  test_corpus.py  test_cost.py  test_metrics.py  test_plots.py  test_smoke.py
